// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<LinksCard
  links={
    Array [
      Object {
        "title": "Tristique ullamcorper id vitae",
        "url": "#",
      },
      Object {
        "title": "Nulla mollis sapien sollicitudin",
        "url": "#",
      },
      Object {
        "title": "Vivamus facilisis dolor et massa",
        "url": "#",
      },
      Object {
        "title": "Vestibulum nisl egestas",
        "url": "#",
      },
    ]
  }
  theme={
    Object {
      "container": "src-shared-components-tc-communities-LinksCard-___style__container___1im8e",
      "item": "src-shared-components-tc-communities-LinksCard-___style__item___2Z3tF",
      "link": "src-shared-components-tc-communities-LinksCard-___style__link___AMsX5",
      "list": "src-shared-components-tc-communities-LinksCard-___style__list___1f_KC",
      "title": "src-shared-components-tc-communities-LinksCard-___style__title___wooM4",
    }
  }
  title="Videos"
/>
`;

exports[`Snapshot match 2`] = `
<LinksCard
  links={
    Array [
      Object {
        "title": "Tristique ullamcorper id vitae",
        "url": "#",
      },
      Object {
        "title": "Nulla mollis sapien sollicitudin",
        "url": "#",
      },
      Object {
        "title": "Vivamus facilisis dolor et massa",
        "url": "#",
      },
      Object {
        "title": "Vestibulum nisl egestas",
        "url": "#",
      },
    ]
  }
  theme={
    Object {
      "container": "src-shared-components-tc-communities-LinksCard-___style__container___1im8e container",
      "item": "src-shared-components-tc-communities-LinksCard-___style__item___2Z3tF item",
      "link": "src-shared-components-tc-communities-LinksCard-___style__link___AMsX5 link",
      "list": "src-shared-components-tc-communities-LinksCard-___style__list___1f_KC list",
      "title": "src-shared-components-tc-communities-LinksCard-___style__title___wooM4 title",
    }
  }
  title="Videos"
/>
`;
